# agdk-rust-by-rib

./: Cargo.toml
debugger/: Cargo.toml
debugger/src/: main.rs
examples/agdk-winit-wgpu-try-1/: Cargo.toml  NOTES.md
examples/agdk-winit-wgpu-try-1/src/: lib.rs
examples/agdk-winit-wgpu-try-2/: .gitignore  Cargo.toml  NOTES.md
examples/agdk-winit-wgpu-try-2/src/: lib.rs  shader.wgsl
